Fix safari border radius clipping bug

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -129,6 +129,7 @@
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         background-color: white;
         overflow:hidden;
+        z-index:0;
         border-radius: 20px;
         @media only screen and (max-width: 768px) {
           margin: 1.6rem 0 1.6rem 0 !important;
